# diabetes-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  deploy.yml  docker-compose.yml  dvc.yaml  k8s-deploy.yml  main.py  metrics.json  mlflow.db  params.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
data/: diabetes.csv.dvc
src/: __init__.py  constants.py  exceptions.py
src/data/: __init__.py  data_ingestion.py
src/model/: __init__.py  model_trainer.py
src/pipeline/: __init__.py  training_pipeline.py
src/utils/: __init__.py  common.py
streamlit_app/: app.py  run_app.py
tests/: test_data_ingestion.py  test_model.py
